run jar for docker build